# php-stack-tray

./: README.md  pyproject.toml
data/: 50-php-stack-tray.rules  50-service-manager.rules  org.example.PHPStackTray.desktop  org.example.PHPStackTray.metainfo.xml  org.example.ServiceManager.desktop  org.example.ServiceManager.metainfo.xml  org.example.servicemanager.policy
flatpak/: org.example.PHPStackTray.yml  org.example.ServiceManager.yml
scripts/: install-polkit-rules.sh
src/php_stack_tray/: config_files.py  main.py  php_logs.py  php_versions.py  services.py  systemd_client.py  tray.py  vhosts.py  web_logs.py  xdebug.py
src/service_manager/: __init__.py  main.py  services.py  tray.py
tests/: __init__.py  conftest.py  test_config_files.py  test_services.py  test_vhosts.py  test_xdebug.py
