[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "service-manager"
version = "0.1.0"
description = "System tray application for managing Linux services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "PyGObject>=3.42.0",
    "dasbus>=1.7",
]

[project.scripts]
service-manager = "service_manager.main:main"

[project.gui-scripts]
service-manager-gui = "service_manager.main:main"

[tool.setuptools.packages.find]
where = ["src"]
