[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "php-stack-tray"
version = "0.1.0"
description = "System tray application for PHP development on Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "PyGObject>=3.42.0",
    "dasbus>=1.7",
]

[project.scripts]
php-stack-tray = "php_stack_tray.main:main"

[project.gui-scripts]
php-stack-tray-gui = "php_stack_tray.main:main"

[tool.setuptools.packages.find]
where = ["src"]
